--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <section id="about" class="py-16">
         <div class="container mx-auto">
             <h2 class="text-3xl font-bold mb-4">About Me</h2>
-            <p class="text-lg">Write something about yourself here.</p>
+            <p class="text-lg">To secure a challenging position in a reputable organization to expand my learnings, knowledge, and skills..</p>
         </div>
     </section>
 
